     - Upgrade tarballs to 2.2.93
     - version: Update to 2.2.93

     The following important patches are still disabled:

       glibc22-hppa-pthreads, glibc22-hppa-rela, ia64-perf

     - debian/patches/0list: prune commented out patches that won't
       be needed anymore

     - debian/patches/ia64-reloc-none.dpatch: Updated, thank to
       Randolph Chung <randolph@tausq.org>

  * GOTO Masanori <gotom@debian.or.jp>
     - debian/packages.d/glibc-doc.mk: change texi2html processed file from
       chapters.texi to libc.texinfo. Closes: #159417
     - Updating 2.2.9x fixes LSB 1.2 compliance. Closes: #156821

 -- Jeff Bailey <jbailey@nisa.net>  Fri, 03 Sep 2002 09:00:47 -0400

glibc (2.2.92-1) unstable; urgency=low

  ** THIS VERSION WAS NEVER UPLOADED **

  * Jeff Bailey <jbailey@nisa.net>
     - Upgrade tarballs to 2.2.92
     - version: Update to 2.2.92
     - debian/control.in/main: Require gcc-3.2 for all archs
     - debian/patches/0list: prune glibc-cvs, glibc22-s390-resource,
       gmon-start, locales-de_CH, sh-sysdep, alpha-build-failure

       These are already included in the 2.3 series.

     - debian/patches/glibc22-misc.dpatch: Split into ...
       debian/patches/makeconfig.dpatch: ... this
       debian/patches/locale-es_AR.dpatch: ... and this
       debian/patches/i386-mathinline.dpatch: ... and this
       debian/patches/ldconfig.dpatch: ... and this.

     - debian/patches/makeconfig.dpatch: Update for 2.3 series

     - debian/patches/0list: Temporarily disable some other patches:

       glibc22-hppa-pthreads, glibc22-hppa-rela, ia64-perf

     - debian/rules: memset.S works on ppc now, so stop deleting it.  Thanks 
       to Jack Howarth <howarth@fuse.net> for letting us know.

     - debian/sysdeps/gnu.mk: Remove --enable-libio, now set by default.  Add
       NO_TEST = yes, make check does not run on i386-gnu.

     - debian/sysdeps/tools.mk: Hardcode gcc-3.2 for $(CC) and $(BUILD_CC)
       until gcc-defaults switches.
