@@ -14,6 +14,8 @@ glibc (2.2.93-1) unstable; urgency=low
      - debian/patches/ia64-reloc-none.dpatch: Updated, thank to
        Randolph Chung <randolph@tausq.org>
 
+     - debian/make-cvs-patch.sh: New file.
+
   * GOTO Masanori <gotom@debian.or.jp>
      - debian/packages.d/glibc-doc.mk: change texi2html processed file from
        chapters.texi to libc.texinfo. Closes: #159417
